--- a/core/src/main/resources/game.properties
+++ b/core/src/main/resources/game.properties
@@ -1,7 +1,7 @@
-#Fri Mar 21 12:55:16 NOVT 2025
+#Sat Mar 22 23:32:07 NOVT 2025
 savesDir=saves
-game.isRelease=false
-game.releaseDate=2025-03-21-12\:55\:16
+game.isDebugUi=false
+game.releaseDate=2025-03-22-23\:32\:07
 window.Title=GravitySimulation2-JavaEdition
 window.isResizable=false
-game.version=0.2.1
+game.version=0.4.0
