--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,13 @@
+plugins {
+  id 'java-library'
+}
+
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 eclipse.project.name = appName + '-core'
 
 dependencies {
+  implementation project(':shared')
+
   api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
 
